--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>FORMS</h1>
     <form name="registration" action="msg.html" method="get">
         <label for="name">Name</label>
-        <input type="text" id="name">
+        <input type="text" id="name" name="name">
         <br>
         <br>
         <label for="email">Email Address</label>
-        <input type="email" id="email">
+        <input type="email" id="email" name="email">
         <br>
         <br>
         <label for="password">Password</label>
-        <input type="password" id="password">
+        <input type="password" id="password" name="password">
         <br>
         <br>
         <label for="language">Language</label>
@@ -59,7 +59,7 @@
         <br>
         <br>
         <label for="no">Phone Number</label>
-        <input type="number" id="no">
+        <input type="number" id="no" name="no">
         <br>
         <br>
         <input type="submit">
