--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
         <br>
         <input type="submit">
     </form>
+
+    <h1>TABLES</h1>
+    <a href="tables.html">Click here</a>
 </body>
 </html>
